--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "test-assignment",
   "author": "Pavlo Kodii",
-  "homepage": "https://pavel-kodiy.github.io/abz.agency-assignment/",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://pavel-kodiy.github.io/abz.agency-assignment/",
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -13,6 +13,7 @@
     "@types/node": "^16.18.69",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
@@ -27,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
